--- a/explore_sars_cov_2.ipynb
+++ b/explore_sars_cov_2.ipynb
@@ -40,7 +40,7 @@
     "hostname = 'localhost'\n",
     "database = 'chembl_27'\n",
     "user = 'pwalters'\n",
-    "password = 'relayrelay'\n",
+    "password = 'imnottellin'\n",
     "con = sql.connect(host=hostname, database=database, user=user, password=password)"
    ]
   },
